2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03865] Re: configure --help
	* acinclude.m4 (AC_W3M_ANSI_COLOR): depends USE_COLOR
		(AC_W3M_BG_COLOR): depends USE_COLOR
		(AC_W3M_W3MMAILER): depends external_uri_loader
	* fm.h: undef USE_BG_COLOR ifndef USE_COLOR

2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03864] doc/README
	* doc/README doc-jp/README: update

2003-04-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m] local cookie string is too easy to guess.
	* fm.h (Local_cookie): deleted
	* local.c (Local_cookie): static
		(writeLocalCookie): localCookie()
		(setLocalCookie): deleted
		(localCookie): added
	* main.c (main): delete srand48(), setLocalCookie()
		(adBmark): s/Local_cookie/localCookie()/
	* proto.h (setLocalCookie): deleted
		(localCookie): added
	* rc.c (load_option_panel): s/Local_cookie/localCookie()/

2003-04-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03858] configure cleanup
	* acinclude.m4 configure.in: update

2003-04-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03856] <gc.h> 
	* backend.c entity.c fm.h hash.c indep.c indep.h matrix.c
	  textlist.c: s/"gc.h"/<gc.h>/

2003-04-08  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03849] fix no INET6
	* ftp.c: no need ifdef INET6

2003-04-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03846] fix use_history
	* main.c (main): move loadHistory

2003-04-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03844] w3mhelp.cgi update
	* scripts/w3mhelp-funcdesc.en.pl.in: add %menu_funcdesc
	* scripts/w3mhelp-funcdesc.ja.pl.in: add %menu_funcdesc
				update %title
	* scripts/w3mhelp-funcname.pl.in: add %menu_funcname
				add %menu_keyfunc
	* scripts/w3mhelp.cgi.in: modified for menu
				link to keymap

2003-04-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03843] cleanup macros
	* config.h.dist config.h.in etc.c file.c fm.h ftp.c linein.c 
	   main.c rc.c:
	   delete EMACS_LIKE_LINEEDIT, VI_PREC_NUM, LABEL_TOPLINE, 