@@ -1,3 +1,9 @@
+2003-04-10  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03870] Re: configure --help
+	* acinclude.m4 (AC_W3M_IMAGE): fix help message
+			(AC_W3M_SSL): fix typo
+
 2003-04-09  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03865] Re: configure --help
@@ -7717,4 +7723,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.819 2003/04/08 16:27:16 ukai Exp $
+$Id: ChangeLog,v 1.820 2003/04/09 17:46:15 ukai Exp $
